# trollbox

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
client/src/utilities/: client.rs  mod.rs
schema/: .gitignore  Cargo.toml  build.rs
schema/protos/: trollbox.proto
schema/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
